--- a/gb/17/2/28/n8859150.md
+++ b/gb/17/2/28/n8859150.md
@@ -1,14 +1,16 @@
 <a name="1" id="1" target="_blank"></a><span id="1"></span>
-<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/1.jpg" title="大纪元"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/3.jpg" title="国际新闻"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/4.jpg" title="大陆新闻"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/5.jpg" title="评论"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/6.jpg" title="文化"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/7.jpg" title="生活"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/8.jpg" title="娱乐"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/9.jpg" title="健康"><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/10a.jpg" title="独家"></a><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/bfgrhg3918/www/master/t/djy/12a.jpg" title="头条"></a></td></tr>
-<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/bfgrhg3918/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/bfgrhg3918/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/bfgrhg3918/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/bfgrhg3918/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
+<table align=center border="0"><tr><td colspan="2" VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1351518.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/1.jpg" title="大纪元首页" alt="大纪元首页"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/n24hr.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/3.jpg" title="国际新闻" alt="国际新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc413.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/4.jpg" title="大陆新闻" alt="大陆新闻"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news392.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/5.jpg" title="大纪元评论" alt="大纪元评论"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2007.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/6.jpg" title="传统文化" alt="传统文化"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/news2008.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/7.jpg" title="生活消费" alt="生活消费"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/ncyule.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/8.jpg" title="娱乐休闲" alt="娱乐休闲"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nsc1002.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/9.jpg" title="健康" alt="健康"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6092.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/10a.jpg" title="独家" alt="独家"></a><a href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4514.md#1"><img src="https://raw.githubusercontent.com/kobfyi3602/www/master/t/djy/12a.jpg" title="头条要闻" alt="头条要闻"></a></td></tr>
+<tr><td colspan="2" VALIGN=TOP><a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">翻墙</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5657.md#1">三退</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6124.md#1">诉江</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176117.md#1">中共卖国</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5773.md#1">贪腐淫乱</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176115.md#1">窜改历史</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176107.md#1">党魁画皮</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1320400.md#1">中共间谍</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176114.md#1">破坏传统</a> | <a target="_blank" href="https://github.com/kobfyi3602/ntdtv/blob/master/gb/prog447_1.md#1">恶贯满盈</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/ncid278.md#1">人权</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1176111.md#1">迫害</a> | <a target="_blank" href="https://gitlab.com/szzdlab/mh-qikan/blob/master/README.md#1">期刊</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5562.md#1">伪火</a></p><p><a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/9p.md#1">社论</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4378.md#1">问答</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5792.md#1">剖析</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5735.md#1">两岸比对</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6119.md#1">各国褒奖</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf6120.md#1">民众声援</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf1188594.md#1">难忘记忆</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf3180.md#1">海外弘传</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5410.md#1">万人上访</a> | <a target="_blank" href="https://github.com/kobfyi3602/www/blob/master/README.md?zsrh#1">平台首页</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4386.md#1">支持</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4389.md#1">真相</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf5790.md#1">圣缘</a> | <a target="_blank" href="https://github.com/kobfyi3602/djy/blob/master/gb/nf4786.md#1">神韵</a></td></tr>
 <tr><td VALIGN=TOP width="626"><h2 align=center>美国夫妇领养天生无四肢女童 视频感动网民</h2>
-<a href="https://git.io/JkR9F"><img width="600" src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/djtsp.jpg"title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/bfgrhg3918/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3>
-<h6></h6>
+<img width="600" src="https://i.epochtimes.com/assets/uploads/2017/03/vv11.32.26-600x400.jpg" />
+<h6>小女孩背影示意图。（pixabay）
+</h6>
 <hr>
-	<p>【大纪元2017年03月01日讯】（大纪元记者夏雨编译报导）一对<ahref="https://github.com/bfgrhg3918/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%AB%E5%A6%87.md#1">美国夫妇</a>领养了一名天生失去双臂和双腿的三岁女孩，时隔一年后的现在，这对夫妇分享了一段家庭视频，并表示：“领养这个<ahref="https://github.com/bfgrhg3918/djy/blob/master/gb/tag/%E7%89%B9%E6%AE%8A%E9%9C%80%E8%A6%81%E7%9A%84%E5%AD%A9%E5%AD%90.md#1">特殊需要的孩子</a>，永远地改变了我们的家。”</p>
-<p>据CBS新闻2月27日报导，在把三岁的养女玛丽亚（Maria）从菲律宾带到美国一周年之际，阿德里安娜．斯图尔特（Adrianne Stewart）在脸书上分享了一段视频，展示玛丽亚的成长历程。随着成千上万网民观看这段视频，这个出生时就没有胳膊和腿的小女孩故事已经传遍了世界。</p>
-<p>斯图尔特的这篇文章在人气博客网站“Love What Matters”获得70万条跟帖。她在文章中写道：“当我们找到我们的女儿时，我们认为没有资格，或是没有做好足够准备去当像她这样一个孩子的父母。这个孩子出生时就没有胳膊和腿。但我们知道，我们可以爱她，爱她是最重要的。她所给我们的远远地超过了我们给她的。”</p>
-<p>斯图尔特最初没有想与全世界分享玛丽亚的故事，但她希望它（这个故事）能激励其他父母在世界各地收养有<ahref="https://github.com/bfgrhg3918/djy/blob/master/gb/tag/%E7%89%B9%E6%AE%8A%E9%9C%80%E8%A6%81%E7%9A%84%E5%AD%A9%E5%AD%90.md#1">特殊需要的孩子</a>。斯图尔特说：“有很多孩子在那里没有家，且这（领养）并不像人们所认为的那么困难和艰苦。”</p>
+	<p>【大纪元2017年03月01日讯】（大纪元记者夏雨编译报导）一对<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%BE%8E%E5%9B%BD%E5%A4%AB%E5%A6%87.md#1">美国夫妇</a>领养了一名天生失去双臂和双腿的三岁女孩，时隔一年后的现在，这对夫妇分享了一段家庭视频，并表示：“领养这个<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%89%B9%E6%AE%8A%E9%9C%80%E8%A6%81%E7%9A%84%E5%AD%A9%E5%AD%90.md#1">特殊需要的孩子</a>，永远地改变了我们的家。”</p>
+<p>据CBS新闻2017年2月27日报导，在把三岁的养女玛丽亚（Maria）从菲律宾带到美国一周年之际，阿德里安娜．斯图尔特（Adrianne Stewart）在脸书上分享了一段视频，展示玛丽亚的成长历程。随着成千上万网民观看这段视频，这个出生时就没有胳膊和腿的小女孩故事已经传遍了世界。</p>
+<p>斯图尔特将这篇文章发布在人气博客网站“Love What Matters”，她在文中写道：“当我们找到我们的女儿时，我们认为没有资格，或是没有做好足够准备去当像她这样一个孩子的父母。这个孩子出生时就没有胳膊和腿。但我们知道，我们可以爱她，爱她是最重要的。她所给我们的远远地超过了我们给她的。”</p>
+<p><strong>?<u><ahref="https://www.facebook.com/lovewhatreallymatters/videos/1421416724547388" target="_blank" rel="noopener noreferrer">点击这里观看影片</a></u>。</strong></p>
+<p>斯图尔特最初没有想与全世界分享玛丽亚的故事，但她希望它（这个故事）能激励其他父母在世界各地收养有<ahref="https://github.com/kobfyi3602/djy/blob/master/gb/tag/%E7%89%B9%E6%AE%8A%E9%9C%80%E8%A6%81%E7%9A%84%E5%AD%A9%E5%AD%90.md#1">特殊需要的孩子</a>。斯图尔特说：“有很多孩子在那里没有家，且这（领养）并不像人们所认为的那么困难和艰苦。”</p>
 <p>两年前，斯图尔特联系了一家收养机构，寻找一个需要家庭的孩子。她已经有三个孩子：两个女孩，分别是11岁和13岁，以及一个从菲律宾收养的6岁男孩。</p>
 <p>该机构给她发送来了一份儿童名单。当她与丈夫一起翻阅这几十个名字和照片时，她发现了一个6个月大的、长着红玫瑰色圆形脸颊的女孩，立刻就喜欢上了她。</p>
 <p>斯图尔特说：“我们知道必须收养她。”</p>
@@ -18,50 +20,48 @@
 <p>斯图尔特承认，他们与玛丽亚都相信“天降神迹”，他们的信仰得到了回报。</p>
 <p>斯图尔特说：“我们害怕开始，不知道要期望什么，但一切都落到了应该的位置上。当你开始时，这似乎是一件大事，但一切会（变得）正常。”</p>
 <p>事实上，斯图尔特说，这段经历是如此充实和积极，这个家庭计划明年从菲律宾再收养一个9岁的、有特殊需要的女孩。#</p>
-<p><a width="640" b="360" src=""></a><a href="https://git.io/JkR9F"><img width="600" src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/djtsp.jpg" title="进入原文观看"  alt="进入原文观看"></a><h3 align=center>(视频.国内建议下载<a href="https://github.com/bfgrhg3918/www/blob/master/README.md#8">翻墙软件</a>进入原文观看)</h3><hr><a src="https://www.youtube.com/embed/dU4tjuOw7HA?feature=oembed" frameborder="0" allow="accelerometer; autoplay; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></a></p>
+<p><strong>?<u><ahref="https://youtu.be/dU4tjuOw7HA" target="_blank" rel="noopener noreferrer">点击这里观看影片</a></u>。</strong></p>
 <p>责任编辑：叶紫微</p>
 <p style="text-align: center;"><div class="inline_share"><ahref="https://www.facebook.com/sharer/sharer.php?u=https%3A%2F%2Fwww.epochtimes.com%2Fgb%2F17%2F2%2F28%2Fn8859150.md#1" target="_blank" style="margin-bottom:10px;display:inline-block;"><img src="https://www.epochtimes.com/assets/themes/djy/images/fb_share/animation.gif"></a></div></p>
 	
 <hr>
-<hr>
+
 
 <strong>相关新闻：</strong>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/16/10/8/n8380053.md#1">因领养中国女孩结缘 两美国妈妈的友谊不寻常</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/16/11/25/n8527281.md#1">美两邻居各领养中国女童 发现竟是亲姐妹</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/17/2/7/n8784527.md#1">中国双胞胎姐妹被海外不同家庭领养的故事</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/17/6/1/n9213462.md#1">武长顺被判死缓 “天津事件”黑幕引关注</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/10/8/n8380053.md#1">因领养中国女孩结缘 两美国妈妈的友谊不寻常</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/11/25/n8527281.md#1">美两邻居各领养中国女童 发现竟是亲姐妹</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/2/7/n8784527.md#1">中国双胞胎姐妹被海外不同家庭领养的故事</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/6/1/n9213462.md#1">武长顺被判死缓 “天津事件”黑幕引关注</a></li>
 <hr>
 
 
 <strong>编辑推荐：</strong>
-<li><a href="https://github.com/onzhi266/djy/blob/master/gb/20/2/22/n11887949.md#1">美参议员：中共刻意控制新冠病毒信息流动</a></li>
-<li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/10/10/n10774701.md#1" target="_blank">推倒这堵墙——里根总统的柏林墙演讲</a></li><li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank">关注3亿人三退</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/19/1/15/n10977767.md#1" target="_blank">伊朗姑娘嘉扎尔?塔瓦纳艾(3) 骑向自由</a></li><hr>
-
-
-<strong>热门新闻：</strong>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/15/n12550540.md#1">因预言中共病毒爆红 印度男孩预示来年天象</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/6/n12529751.md#1">中枪转生协警缉凶  双胎记男孩会前世妻儿</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/13/n12546586.md#1">紫微斗数推算  小谈拜登真能登大位吗？</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/9/13/n12399763.md#1">既是“于青菜”又是“于青天”——清朝廉吏于成龙</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/10/31/n12514973.md#1">别装熟！想广结善缘 但这行为真的很讨人厌</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/17/n12556673.md#1">【薇羽看世间】川普早已布局撒网</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/18/n12557446.md#1">【十字路口】中共介入大选 美国新独立战争？</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/18/n12557501.md#1">【西岸观察】美国大选舞弊中的委内瑞拉因素</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12552183.md#1">【翻墙必看】拜登又一大丑闻曝光 涉奥巴马</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/17/n12554108.md#1">计算“邮寄选票”后反超   纽约众议员布朗斯汀宣布胜选</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553767.md#1">被央视污言秽语狂骂 蓬佩奥：继续制裁</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12554448.md#1">“八路军”住别墅抹发胶 中共抗日剧太雷人</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/17/n12554623.md#1">陪孙俪选窗帘意见遭否定 邓超反问获网友趣答</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/15/n12551581.md#1">迪士尼CEO承认 《花木兰》因争议影响票房</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/15/n12551768.md#1">赵树海70岁生日出专辑 不禁直呼想念小孙女</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553368.md#1">台研发全球首株抗体 可直接杀死癌细胞</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/13/n12547278.md#1">还在到处发名片？不要让自己成为人脉怪兽</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/17/n12555428.md#1">甘肃男子带“老虎”逛街 路人回头率100%</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12552492.md#1">在教堂住12年 英国流浪猫过世获纪念仪式</a></li>
-<li><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/20/11/16/n12553064.md#1">英男声称被外星人绑架 在太空船上遇到歌星</a></li>
+<li><a href="https://github.com/ychojm359/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank">人心向善 大陆当初盛况</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/5/18/n10405751.md#1" target="_blank">林辉：燕京大学校长相信中共后的结局</a></li><li><a href="https://github.com/tsiac2612/djy/blob/master/gb/18/9/21/n10732313.md#1" target="_blank">从长春到韩国 80后美女的戏剧人生（1）</a></li>
 <hr>
 
-<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/bfgrhg3918/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/bfgrhg3918/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/2/28/n8859150.htm">美国夫妇领养天生无四肢女童 视频感动网民</a></p><hr>
+<strong>热门新闻：</strong>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/12/n13734778.md#1">【百年真相】替毛背锅“红色特工”潘汉年惨死</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/5/n13727490.md#1">【百年真相】密谋“金融政变” 肖建华将现身？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/28/n13747559.md#1">一首名曲奏出大提琴前所未有的力量</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/29/n13748202.md#1">【未解之谜】通行灵界的科学家之二 天堂见闻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/18/n13739799.md#1">【奇梦】姻缘天定 女子依梦得夫 男子依梦得妻</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752388.md#1">【财商天下】美欧看上 台湾会脱孤？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752277.md#1">【马克时空】预警机、侦察机扮奇兵 助乌军精准打击俄军</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752436.md#1">李克强十万人大会事先获得习近平默许？</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752419.md#1">专家：中共核检是干柴烈火 随时引爆疫情</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751953.md#1">刚送完满月礼盒 昆凌首晒产后全身照惊呆网友</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751832.md#1">评论：《壮志凌云2》证明好莱坞无需中国市场</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751923.md#1">港星杨英伟出售千万房产 已举家移民奥地利</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752937.md#1">林志玲47岁高龄当妈 写给儿子的话令人动容</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/5/n13752955.md#1">金马影帝万梓良现身小商演 身体欠安需2人搀扶</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/5/26/n13746023.md#1">腰痛是肾脏在求救？肾是沉默器官 4症状要警惕</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/3/n13751690.md#1">危险长新冠4类人警惕 疫苗也挡不住？1招改善</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752195.md#1">5个早上常见的习惯 会降低睡眠品质</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752111.md#1">避免旅行时多花冤枉钱 专家教你几招</a></li>
+<li><a href="https://github.com/kobfyi3602/djy/blob/master/gb/22/6/4/n13752361.md#1">减肥新进展 香港浸大研究发现减少饮食方法</a></li>
+<hr>
 
-<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/bfgrhg3918/djy/blob/master/gb/17/2/28/n8859150.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/bfgrhg3918/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/st1.jpg" title="关注3亿人三退"  alt="关注3亿人三退"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/sj1.jpg" title="303万人举报江泽民"  alt="303万人举报江泽民"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/bfgrhg3918/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/bfgrhg3918/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/bfgrhg3918/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
+<strong>本文转自<a href="https://www.epochtimes.com">大纪元</a>（国内需用<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>才能访问）</strong><p>下载<a href="https://github.com/kobfyi3602/www/blob/master/README.md#8">翻墙软件</a>浏览原文：<a href="https://www.epochtimes.com/gb/17/2/28/n8859150.htm">美国夫妇领养天生无四肢女童 视频感动网民</a></p><hr>
+
+<strong>手机上长按并复制下面二维码分享本文章：</strong><br><br><img src="https://chart.apis.google.com/chart?cht=qr&chs=240x240&choe=UTF-8&chld=M|2&chl=https://github.com/kobfyi3602/djy/blob/master/gb/17/2/28/n8859150.md%231" title="分享本文章"></td><td VALIGN=TOP><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/1/21/n4622075.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/wei-f1.jpg" title="中共的伪火骗局"  alt="中共的伪火骗局"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#9" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yong-h.jpg" title="永恒的见证"  alt="永恒的见证"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/9/29/n3974789.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/shang-lnz.jpg" title="善良女子被中共投男牢"  alt="善良女子被中共投男牢"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/3/16/n4663449.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z3.jpg" title="警卫目击活摘器官"  alt="警卫目击活摘器官"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/16/8/7/n8177641.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z4.jpg" title="证人描述活摘恐怖"  alt="证人描述活摘恐怖"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/4/19/n2881569.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/huo-z1.jpg" title="揭开活摘器官黑幕"  alt="揭开活摘器官黑幕"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/10/11/7/n3077476.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/ma-ks.jpg" title="马克思的成魔之路"  alt="马克思的成魔之路"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/14/6/9/n4173977.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/chang-zs.jpg" title="藏字石 蕴天机"  alt="藏字石 蕴天机"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/5/10/n10381511.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/st1.jpg" title="关注三亿人三退"  alt="关注三亿人三退"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/3/21/n10237682.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jie-t.jpg" title="解体中共复兴中华"  alt="解体中共复兴中华"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/9/2/9/n2422991.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/gao-zs.jpg" title="中共迫害良心律师"  alt="中共迫害良心律师"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/12/9/n10900044.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj1.jpg" title="三百多万人举报江泽民"  alt="三百多万人举报江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/8/28/n10672014.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/sj2.jpg" title="这些官员为何起诉江泽民"  alt="这些官员为何起诉江泽民"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/8/12/18/n2367165.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/liangan.jpg" title="海峡两岸的强烈对比"  alt="海峡两岸的强烈对比"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/12/10/n4593139.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/jia-ndzl.jpg" title="加拿大总理的贺信"  alt="加拿大总理的贺信"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/11/6/17/n3289382.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xiao-wd.jpg" title="探寻真相兼听则明"  alt="探寻真相兼听则明"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/10/27/n10812623.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/yindu.jpg" title="印度媒体报道东方"  alt="印度媒体报道东方"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/18/6/9/n10469652.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/xie-j.jpg" title="不一样的海外校园"  alt="不一样的海外校园"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/7/4/5/n1669415.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/li-up.jpg" title="从大师到徒弟的传奇"  alt="从大师到徒弟的传奇"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/17/5/26/n9191512.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl2.jpg" title="亿万人与东方一本奇书"  alt="亿万人与东方一本奇书"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/13/11/27/n4020290.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zhen-h.jpg" title="大陆见不到的震撼场面"  alt="大陆见不到的震撼场面"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/15/7/17/n4482910.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/dalu-sk.jpg" title="人心向善 大陆当初盛况"  alt="人心向善 大陆当初盛况"></a><br><a href="https://github.com/kobfyi3602/djy/blob/master/gb/19/1/5/n10955468.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/zfl1.jpg" title="追寻真理 这书讲什么"  alt="追寻真理 这书讲什么"></a><br><a href="https://github.com/kobfyi3602/www/blob/master/README.md?dfh#1" target="_blank"><img src="https://raw.githubusercontent.com/kobfyi3602/djy/master/gb/300/fq1.jpg" title="下载免费翻墙软件"  alt="下载免费翻墙软件"></a><br></td></tr></table>
